# VNSleuth

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  iconv.hpp  main.cpp  main.hpp  parser.cpp  parser.hpp  translator.cpp
examples/v28130 - Nekotsuku, Sakura./: __vnsleuth_names.txt  __vnsleuth_prompt.txt
examples/v28130 - Nekotsuku, Sakura./__vnsleuth/: __vnsleuth_names.txt  __vnsleuth_prompt.txt
examples/v44173 - Haruka Ao no Hanayome ni/: __vnsleuth_prompt.txt
examples/v44173 - Haruka Ao no Hanayome ni/__vnsleuth/: __vnsleuth_7df51eb2fd5a1d300c0a58ac8f30a8a6ecac1dde.txt  __vnsleuth_names.txt  __vnsleuth_prompt.txt  __vnsleuth_replace.txt
tools/: format_arc_dsc.cpp  lastfile  llm_common.sh  llm_qwen14.sh  llm_qwen14vn.sh  llm_qwen32.sh  llm_qwen32vn.sh  parser_base.cpp  parser_base.hpp  parser_bits.hpp
tools/xclipmonitor/: Makefile  xclipmonitor.cpp
